--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="/CSS/main.css">
+    <link rel="stylesheet" href="CSS/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
 <section>
-    <img src="/image/icon-sedans.svg" alt="">
+    <img src="image/icon-sedans.svg" alt="">
     <h1>Sedans </h1>
     <p>Choose a sedan for its affordability and excellent fuel economy. Ideal for cruising in the city or on your next road trip. </p>
     
@@ -21,14 +21,14 @@
 
 </section>
 <section>
-    <img src="/image/icon-suvs.svg" alt="">
+    <img src="image/icon-suvs.svg" alt="">
     <h1> SUVs </h1>
     <p>Take an SUV for its spacious interior, power, and versatility. Perfect for your next family vacation and off-road adventures. </p>
     <button>Learn More</button>
 
 </section>
 <section>
-    <img src="/image/icon-luxury.svg" alt="">
+    <img src="image/icon-luxury.svg" alt="">
     <h1> Luxury  </h1>
     <p>Cruise in the best car brands without the bloated prices. Enjoy the enhanced comfort of a luxury rental and arrive in style.  </p>
     <button>Learn More</button>
