--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     
     <link href="main.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca&display=swap" 
+    rel="stylesheet">
 </head>
 <body>
     <header>
